Fixed header on mobile

--- a/assets/sass/header.scss
+++ b/assets/sass/header.scss
@@ -2,6 +2,9 @@
 // Primary navigation menu
 header .is-navbar-box{
     margin-top:12px;
+    @include for-mobile{
+      margin:0;
+    }
     .is-brand .is-logo a{
       font-family: FiraSans;
       text-decoration: none;
